@@ -1,6 +1,9 @@
 Changes since 4.0
 -------------------
 
+* [HTTPASYNC-63] ConnectionShutdownException thrown in case of out-of-sequence response.
+  Contributed by Oleg Kalnichevski <olegk at apache.org>
+
 * [HTTPCLIENT-1442] Authentication header set by the user gets removed in case
   of proxy authentication.
   Contributed by Oleg Kalnichevski <olegk at apache.org>
